# hermes-pipeline

./: .dockerignore  .gitignore  ARCHITEKTUR.md  DECISIONS.md  INBETRIEBNAHME.md  Makefile  ORCHESTRATOR-PLAN.md  README.md  ROADMAP.md
board/: hermes-board.service  pyproject.toml  tailwind.input.css
board/hermes_board/: __init__.py  __main__.py  ansicht.py  app.py  speicher.py
board/hermes_board/static/: dashboard.css  dashboard.js  dragdrop.js  theme.css
board/hermes_board/templates/: base.html  board.html  karte.html  neu.html
board/hermes_board/templates/partials/: board.html  metriken.html  system.html
board/tests/: test_ansicht.py  test_api.py  test_ui.py
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint-worker.sh
intake-vorlagen/: intake-aenderung.md  intake-neuprojekt.md
prompts/: README.md  architekten-prompt.md  reviewer-prompt.md
schemas/: README.md  pyproject.toml
schemas/beispiele/: projekt.beispiel.yaml
schemas/hermes_schemas/: __init__.py  cli.py  intake.py  karte.py  projekt.py
schemas/tests/: test_cli.py  test_intake.py  test_karte.py  test_projekt.py
skills/: README.md
skills/hermes-architekt/: SKILL.md
skills/hermes-architekt/references/: projekt-yaml-schema.md  projekt.beispiel.yaml
skripte/: karte-mergen.sh  spalten-anlegen.py
skripte/bug-diff-test/: README.md  lauf.sh  review-auftrag.md
templates/skeleton-web/: README.md  copier.yml
templates/skeleton-web/template/: .gitignore  AGENTS.md  ARCHITEKTUR.md  BLAUPAUSE.md  (+9 more)
worker/: README.md  config.beispiel.yaml  hermes-worker.service  pyproject.toml
worker/hermes_worker/: __init__.py  __main__.py  aider_runner.py  board.py  checks.py  config.py  materialisierung.py  repo.py  reviewer.py  state.py  telegram.py  worker.py
worker/tests/: conftest.py  test_aider_umgebung.py  test_board_integration.py  test_materialisierung.py  test_reviewer.py  test_state.py  test_worker.py
(+14 files in other folders)
