[project]
name = "hermes-board"
version = "0.1.0"
description = "Kanban-Board der Hermes-Pipeline: Dashboard + Steuerung, API-Gegenstück zum Poll-Worker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
hermes-board = "hermes_board.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hermes_board*"]

[tool.setuptools.package-data]
hermes_board = ["templates/**/*.html", "static/*"]
