[project]
name = "hermes-schemas"
version = "0.1.0"
description = "Vertragsschicht der Hermes-Pipeline: projekt.yaml-Schema, Kartenformat, Intake-Validierung"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
hermes-validiere = "hermes_schemas.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hermes_schemas*"]
