[project]
name = "hermes-worker"
version = "0.1.0"
description = "Poll-Worker der Hermes-Pipeline: Board pollen, Aider-Läufe fahren, make check im Container"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "requests>=2.31",
    "copier>=9.0",
    "hermes-schemas",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
hermes-worker = "hermes_worker.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hermes_worker*"]
